// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionBar /> should add shadow and gutters 1`] = `
<div
  className="kLhZww"
/>
`;

exports[`<ActionBar /> should omit shadow and gutters 1`] = `
<div
  className="hlRjdq"
/>
`;

exports[`<BottomActionBar /> should add shadow and gutters 1`] = `
<div
  className="jhtazh"
/>
`;

exports[`<BottomActionBar /> should omit shadow and gutters 1`] = `
<div
  className="ciXEFM"
/>
`;
